--- a/src/app/components/shared/navbar/navbar.component.css
+++ b/src/app/components/shared/navbar/navbar.component.css
@@ -1,5 +1,3 @@
-  .active-link {
-    background-color: #2563eb; /* Blue-600 */
-    color: white;
-    border-radius: 4px;
-  }
+.active-link {
+  @apply font-semibold text-blue-600 bg-blue-50;
+}
