--- a/src/app/features/organisation-section/components/customer/customer.component.html
+++ b/src/app/features/organisation-section/components/customer/customer.component.html
@@ -1,11 +1,11 @@
 <div class="p-2">
     <!-- Top Buttons -->
-    <div class="flex space-x-4 mb-4">
+    <!-- <div class="flex space-x-4 mb-4">
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
           (click)="changeSection('customer')">Customer</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
           (click)="changeSection('customerCategory')">Customer Categories</button>
-      </div>
+      </div> -->
 
     <!-- Customer Section -->
     <div *ngIf="selectedSection === 'customer'" class="p-2">
