--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -1,6 +1,6 @@
 <div class="p-4">
     <!-- Section Selection Buttons -->
-    <div class="flex space-x-4 mb-4">
+    <!-- <div class="flex space-x-4 mb-4">
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
             (click)="changeSection('employee')">Employee</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
@@ -11,7 +11,7 @@
             (click)="changeSection('skills')">Skills</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
             (click)="changeSection('reportingManagerHistory')">Reporting Manager History</button>
-    </div>
+    </div> -->
 
 
     <!-- Employee Section -->
