--- a/src/app/features/organisation-section/components/project/project.component.html
+++ b/src/app/features/organisation-section/components/project/project.component.html
@@ -1,13 +1,13 @@
 <div class="p-4">
     <!-- Section Selection Buttons -->
-    <div class="flex space-x-4 mb-4">
+    <!-- <div class="flex space-x-4 mb-4">
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
             (click)="changeSection('project')">Project</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
             (click)="changeSection('projectDeliverable')">Project Deliverable</button>
         <button class="bg-gray-200 hover:bg-gray-300 text-gray-900 py-2 px-4 rounded-md"
             (click)="changeSection('taskCategory')">Task Category</button>
-    </div>
+    </div> -->
     <!-- Task Category Section -->
     <div *ngIf="selectedSection === 'taskCategory'">
         <h3 class="text-xl font-semibold mb-4">Add New Task Category</h3>
