--- a/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
+++ b/src/app/features/resource-management/components/assign-project-team/assign-project-team.component.html
@@ -1,3 +1,5 @@
+<div class="p-4">
+
 <div class="grid grid-cols-5 gap-4 mt-8">
     <!-- Row 1 -->
     <div>
@@ -365,4 +367,5 @@
         class="px-3 py-1 border rounded-md">
         Next
     </button>
+</div>
 </div>
