--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -106,8 +106,7 @@
                     </span>
                 </div>
 
-                <!-- Role -->
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label>Role*</label>
                     <select [(ngModel)]="employee.role_id" #role="ngModel" name="role" required
                         class="border p-2 w-full rounded-md"
@@ -122,7 +121,6 @@
                     </span>
                 </div>
 
-                <!-- Department -->
                 <div class="form-group">
                     <label>Department*</label>
                     <select [(ngModel)]="employee.department_id" #department="ngModel" name="department" required
@@ -137,7 +135,7 @@
                         *ngIf="(department.invalid && department.touched) || (employeeForm.submitted && department.invalid)">
                         Department is required
                     </span>
-                </div>
+                </div> -->
 
                 <!-- Passport Yes/No -->
                 <div class="form-group">
