--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -158,7 +158,7 @@
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition">
       Assign Project Team
     </a>
-    <a [routerLink]="['/resource-management', 'all-teams-timesheet']" routerLinkActive="active-link"
+    <!-- <a [routerLink]="['/resource-management', 'all-teams-timesheet']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition">
       All Teams Timesheet
     </a>
@@ -173,7 +173,7 @@
     <a [routerLink]="['/resource-management', 'view-update-employee-skills']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition">
       View/Update Employee Skills
-    </a>
+    </a> -->
   </div>
 
   <!-- Navbar Right Section -->
